# hwsAgents

./: .env.example  .gitignore  README.md  proposal_agent_README.md  pyproject.toml  requirements.txt
data/: objections.yaml  pricing.yaml
docs/: manager-agent.md  pricing-agent.md  proposal-agent.md  shared-modules.md
manager_agent/: bot.py  config.py  handler.py  main.py  prompts.py
pricing_agent/: bot.py  config.py  handler.py  main.py  prompts.py
proposal_agent/: client.py  config.py  main.py
proposal_agent/handlers/: conversation.py  pricing.py
proposal_agent/services/: claude.py  pdf.py  proposal.py
proposal_agent/templates/: proposal_embed.py  proposal_prompt.txt
proposal_agent/utils/: context.py
shared/: data_manager.py  llm.py  memory.py  usage_tracker.py
tests/: test_pricing.py
tests/proposal/: conftest.py  test_claude_service.py  test_config.py  test_conversation.py  test_embed_builder.py  test_integration.py  test_pdf.py  test_pricing.py  test_proposal_model.py
