[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hws-agents"
version = "0.1.0"
description = "HWS internal Discord agent fleet"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "anthropic>=0.39.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
hws-pricing = "pricing_agent.main:main"
hws-manager = "manager_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["shared", "pricing_agent", "manager_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
